# mcp-isolarcloud

./: .mcp.json  CHANGELOG.md  LICENSE  README.md  openapi.json  openapi.yaml  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml
src/mcp_isolarcloud/: __init__.py  server.py
src/mcp_isolarcloud/knowledge/: __init__.py  documents.json
src/mcp_isolarcloud/knowledge/docs/: __init__.py  appendix-1-device-type-dictionary-definitions.md  appendix-10-control-parameter-definitions.md  appendix-2-api-error-code-definitions.md  appendix-3-plaintext-api-call-code-example.md  appendix-4-rsa-encryption-code-example.md  appendix-5-aes-encryption-code-example.md  appendix-6-aes-decryption-code-example.md  appendix-7-ciphertext-api-call-code-example.md  appendix-8-api-call-help-instructions.md  appendix-9-error-code-enumeration.md  common-battery-measuring-points.md  common-bsc-device-measuring-points.md  common-charger-measuring-points.md  common-cmu-device-measuring-points.md  common-combiner-box-measuring-points.md  common-communications-device-measuring-points.md  common-communications-module-measuring-points.md  common-ems-device-measuring-points.md  common-energy-meter-measuring-points.md  common-energy-storage-inverter-measuring-points.md  common-environment-monitoring-device-measuring-points.md  common-ihomemanage-measuring-points.md  common-inverter-measuring-points.md  (+9 more)
tests/: test_server.py
tools/: _isc_client.py  build_openapi.py  refresh_docs.py
